add channellist unit tests bring channel selection up to the root and only have one textwindow (the selected one)

--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
   #component
+  script(src='js/underscore.js')
   script(src='js/socket.io.js')
   script(src='js/moment.js')
   script(src='js/ircng.js')
