--- a/views/index.jade
+++ b/views/index.jade
@@ -2,12 +2,4 @@ extends layout
 
 block content
   #component
-  script(src='js/underscore.js')
-  script(src='js/socket.io.js')
-  script(src='js/moment.js')
-  script(src='js/ircng.js')
-  script(src='js/commandbar.js')
-  script(src='js/textwindow.js')
-  script(src='js/channellist.js')
-  script(src='js/mainwindow.js')
-  script(src='js/application.js')
+  script(src='js/bundle.js')
