Implement nickname setting split the application into two components - irc and login, set the nickname from login and then switch to irc connection on connect button

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,10 +15,11 @@ html
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href="/") Web IRC
+        a.navbar-brand(href="#") Web IRC
         #navbar.collapse.navbar-collapse
           ul.nav.navbar-nav
-            each menuItem in [{ name: "Home", path: '/' }]
+            // { name: "Home", path: '#' }
+            each menuItem in []
               if(menu == menuItem.name)
                 li.active
                   a(href=menuItem.path)= menuItem.name
