Add channel topics, move numerics to the numeric handler and only show unhandled numerics in the status window

--- a/less/site.less
+++ b/less/site.less
@@ -89,3 +89,14 @@ div.command-bar {
 .login {
   margin-top: 10px;
 }
+
+.topic {
+  border: 1px solid #555555; 
+  margin-top: 1px; 
+  margin-left: -15px; 
+  margin-right: -15px; 
+  background: #333333;
+  min-height: 30px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
